corrigindo foto de perfil

--- a/page-instagram/index.html
+++ b/page-instagram/index.html
@@ -20,7 +20,7 @@
     <div class="group">
         <img src="./Img/instagram-logo.png" alt="instagram-logo">
 <div class="profile-photo">
-    <img src="./Img/eumin.jpg" alt="foto de perfil">
+    <img src="./Img/foto-perfil.jpg" alt="foto de perfil">
 </div>
 <a href="#" class="instagram-login" >Continue como Edilza Eleres</a>
 <a href="#" class="instagram-logout">Remover conta</a>
@@ -38,12 +38,14 @@ ou
 
 <!--informação de download de apps--)
 <div class="get-the-app">
-    <p class="get-the-app">Baixe o aplicativo</p>
+    <p class="get-the-app"> Baixe o aplicativo </p>
 </div>
+
 <!--escolha das lojas de apps-->
 <div class="download">
     <a href="#" class="app-download"></a>
     <a href="#" class= "app-download"></a>
+
 </div>
 </div>
 </div>
