ultima versao do arquivo

--- a/page-instagram/index.html
+++ b/page-instagram/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale1.0">
 <link rel="stylesheet" href="style.css">
+<link rel="shortcut icon" href="Img/instagram.ico">
         <title>Instagram</title>
     </head>
 
@@ -30,9 +31,9 @@
 <div class="group">
     <p class="not-account">Não é Edilza Eleres</p>
     <p class="not-account">
-<span class="link-blue">Trocar de conta</span>
+<span class="link-blue"><a href="#">Trocar de conta</a></span>
 ou 
-<span class= "link-blue">Cadastre-se</span>
+<span class= "link-blue"><a href="#">Cadastre-se</a></span>
 </p>
 </div>
 
@@ -41,7 +42,7 @@ ou
     <p class="get-the-app"> Baixe o aplicativo </p>
 </div>
 
-<!--escolha das lojas de apps-->
+<!-- escolha das lojas de apps-->
 <div class="download">
     <a href="#" class="app-download"></a>
     <a href="#" class= "app-download"></a>
